Sun Jun 13 19:35:43 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in comments with '#' instead of 'dnl'; add AC_REVISION.
	* src/dblib/rpc.c dos2unix: s/\r//g.
	
Sun Jun 13 15:18:08 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: some updates and fix for -Bsymbolic detect
	* src/apps/defncopy.c src/ctlib/blk.c:	
	- remove warnings compiling under Solaris
	* src/odbc/Makefile.am: fix for darwin

Sat Jun 12 19:00:28 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am:
	- use -Bsymbolic linker option if available

Sat Jun 12 18:22:49 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/descriptor.c:
	- fix momory leak in SQLCopyDesc
	- fix double pointer if out of memory
	* src/odbc/unittests/convert_error.c:
	- commented part of test

Sat Jun 12 13:43:41 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix statement free

Sun Jun  6 21:21:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: remove silly bug

Sat Jun  5 18:44:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO include/tdsodbc.h src/odbc/odbc.c src/odbc/prepare_query.c:
	* src/odbc/prepare_query.h src/odbc/unittests/putdata.c:
	- fix SQLPutData/SQLParamData

Tue Jun  1 09:33:52 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/dbopen.c:
	* src/dblib/dbutil.c src/dblib/rpc.c src/dblib/xact.c:
	* src/dblib/unittests/common.c:
	- add support for dmalloc

Tue Jun  1 01:46:10 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/dblib/dblib.c src/tds/login.c
	- added dbsettime().  Query timeout remains broken, though.  

Mon May 31 11:37:26 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix typo in comment

Sun May 30 17:07:29 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h  include/sybdb.h src/dblib/dblib.c